<resources>
    <string name="app_name">EchoPosts</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favourites">Favourites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Read more</string>
    <string name="share_post">Share post</string>
    <string name="comment_on_post">Comment on post</string>
    <string name="like_post">Like post</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="user_1">User 1</string>
    <string name="u">U</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_to_echoposts">Welcome to Echoposts</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="no_posts_found">No posts found</string>
    <string name="try_a_different_search_term">Try a different search term</string>
    <string name="read_full_post">Read full post</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="favourite">★ Favourite</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_dark_mode_subtitle">Switch to dark theme</string>

    <string name="settings_account">Account</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_profile_subtitle">Manage your profile settings</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_privacy_subtitle">Control your privacy settings</string>

    <string name="settings_data_storage">Data &amp; Storage</string>
    <string name="settings_clear_cache">Clear Cache</string>
    <string name="settings_clear_cache_subtitle">Free up storage space</string>
    <string name="settings_data_usage">Data Usage</string>
    <string name="settings_data_usage_subtitle">Monitor your data consumption</string>

    <string name="settings_about">About</string>
    <string name="settings_version">Version</string>
    <string name="settings_libraries">Open Source Libraries</string>
    <string name="settings_libraries_subtitle">View used libraries</string>
    <string name="settings_about_app">About EchoPosts</string>
    <string name="settings_about_app_subtitle">Learn more about this app</string>
    <string name="settings_licenses">Licenses</string>
    <string name="settings_licenses_subtitle">View open source licenses</string>

    <string name="settings">Settings</string>
    <string name="settings_support">Support</string>
    <string name="settings_help">Help &amp; FAQ</string>
    <string name="settings_help_subtitle">Get help and support</string>
    <string name="settings_feedback">Send Feedback</string>
    <string name="settings_feedback_subtitle">Share your thoughts with us</string>
    <string name="settings_rate_app">Rate App</string>
    <string name="settings_rate_app_subtitle">Rate us on Google Play</string>

    <string name="settings_danger_zone">Account Actions</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_logout_subtitle">Sign out of your account</string>
    <string name="switch_to_dark_theme">Switch to dark theme</string>
    <string name="header">Header</string>
</resources>