<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment"
    >

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.echoposts.ui.auth.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_main"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.echoposts.ui.auth.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.echoposts.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.echoposts.ui.search.SettingsFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.echoposts.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />
</navigation>